Requisito 6: adiciona o botão

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <div class="ball"></div>
     <div class="ball"></div>
     <div class="ball"></div>
+    <p id="answer">Escolha uma cor</p>
+    <button id="reset-game" type="button">Reiniciar o jogo!</button>
 </body>
 </html>
