--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Qual é a cor?</h1>
-    <span id="rgb-color">(168,34,1)</span>
+    <span id="rgb-color"></span>
     <div class="ball"></div>
     <div class="ball"></div>
     <div class="ball"></div>
@@ -18,5 +18,11 @@
     <div class="ball"></div>
     <p id="answer">Escolha uma cor</p>
     <button id="reset-game" type="button">Reiniciar o jogo!</button>
+    <p>A resposta é uma mistura das seguintes cores:</p>
+    <div class="gabarito"></div>
+    <div class="gabarito"></div>
+    <div class="gabarito"></div>
+
+
 </body>
 </html>
